--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -1,1 +1,3 @@
-/* */
+.nowrap {
+  white-space: nowrap;
+}
